fix - Correção do controller de vendedor, serviço de documentos e configurações